# GameDev-CourceWork

./: Cargo.toml
Hex/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
Hex/benches/: length.rs  lines.rs  rings.rs  wedges.rs
Hex/examples/: 3d_columns.rs  a_star.rs  chunks.rs  field_of_movement.rs  field_of_view.rs  hex_grid.rs  merged_columns.rs  sprite_sheet.rs
Hex/src/: bounds.rs  layout.rs  lib.rs  orientation.rs  shapes.rs
Hex/src/algorithms/: field_of_movement.rs  fov.rs  mod.rs  pathfinding.rs
Hex/src/direction/: diagonal_direction.rs  hex_direction.rs  mod.rs  tests.rs  way.rs
Hex/src/hex/: convert.rs  impls.rs  iter.rs  mod.rs  rings.rs  tests.rs
Hex/src/mesh/: column_builder.rs  mod.rs  plane_builder.rs
assets/kenney_simple-space/Spritesheet/: simpleSpace_sheet.xml  simpleSpace_sheet@2.xml
src/: buttons.rs  colors.rs  fonts.rs  game_state.rs  hex_grid_withlight.rs  main.rs  space_ships.rs  spire_sheet.rs
src/archive/: field_of_move.rs  hex_grid.rs  with_picture.rs
src/ui/: bottom_panel.rs  buttons.rs  left_panel.rs  mod.rs  stats.rs
src/ui/action_panel/: components.rs  layout.rs  mod.rs  plugin.rs  styles.rs
src/ui/actions_panel/: interaction.rs  layout.rs  mod.rs  plugin.rs
src/ui/bottom_panel/: components.rs  mod.rs  plugin.rs
src/ui/game_result/: components.rs  mod.rs  plugin.rs  styles.rs
src/ui/hud/: components.rs  mod.rs  resources.rs  styles.rs
src/world/: actions.rs  button_click.rs  create_map_layout.rs  mod.rs  navigations_systems.rs  ownership.rs  player.rs  resources.rs  setup_world_grid.rs  turn.rs
(+39 files in other folders)
