#workspace = { members = ["Hex"] }
[package]
name = "CourceWork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
hexx = { version = "0.14", features = ["serde"] }
rand = "0.8.5"
glam = "0.24"
bevy_mod_picking = "0.17"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
serde = { version = "1.0.196", features = ["derive"] }
once_cell = "1.19.0"

[profile.dev.package."*"]
opt-level = 3

